--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "terminal-inplace",
   "displayName": "terminal-inplace",
   "description": "Launch your own vscode terminal in the directory of your focus file.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "publisher": "Maples7",
   "engines": {
     "vscode": "^1.24.0"
@@ -18,8 +18,7 @@
     "keybindings": [
       {
         "command": "extension.launchTerminalInPlace",
-        "key": "ctrl+i t",
-        "mac": "cmd+i t"
+        "key": "alt+ctrl+`"
       }
     ],
     "commands": [
@@ -30,8 +29,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
     "typescript": "^2.6.1",
