--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "displayName": "Terminal In Place",
   "description": "Launch your own vscode terminal in the directory of your focus file.",
   "icon": "images/favicon.png",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "Maples7 <maples7.com>",
   "publisher": "Maples7",
-  "license": "GPLv3",
+  "license": "GPL-3.0-only",
   "homepage": "https://github.com/Maples7/vscode-terminal-inplace",
   "repository": {
     "type": "git",
