--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,11 @@
 .vscode/**
 .vscode-test/**
-test/**
+out/test/**
+src/**
 .gitignore
-jsconfig.json
 vsc-extension-quickstart.md
-.eslintrc.json
+**/tsconfig.json
+**/tslint.json
+**/*.map
+**/*.ts
 .DS_Store
