--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Terminal In Place",
   "description": "Launch your own vscode terminal in the directory of your focus file.",
   "icon": "images/favicon.png",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": "Maples7 <maples7.com>",
   "publisher": "Maples7",
   "license": "GPL-3.0-only",
@@ -21,7 +21,7 @@
     "in-place"
   ],
   "engines": {
-    "vscode": "^1.24.0"
+    "vscode": "^1.30.0"
   },
   "categories": [
     "Other"
@@ -29,7 +29,7 @@
   "activationEvents": [
     "onCommand:extension.launchTerminalInPlace"
   ],
-  "main": "./extension",
+  "main": "./out/extension.js",
   "contributes": {
     "keybindings": [
       {
@@ -45,13 +45,16 @@
     ]
   },
   "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6",
-    "eslint": "^4.11.0",
-    "@types/node": "^7.0.43",
+    "typescript": "^3.1.4",
+    "vscode": "^1.1.25",
+    "tslint": "^5.8.0",
+    "@types/node": "^8.10.25",
     "@types/mocha": "^2.2.42"
   }
 }
